# derive-quickcheck-arbitrary

./: Cargo.toml  README.md
src/: lib.rs
tests/: simple.rs
trybuild/fail/: bad_config.rs  bad_config.stderr  duplicate_config.rs  duplicate_config.stderr  field_does_not_impl_arbitrary.rs  field_does_not_impl_arbitrary.stderr
trybuild/pass/: simple.rs
