[package]
name = "derive-quickcheck-arbitrary"
version = "0.1.1"
edition = "2021"
description = "derive quickcheck::Arbitrary"
repository = "https://github.com/aatifsyed/derive-quickcheck-arbitrary"
documentation = "https://docs.rs/derive-quickcheck-arbitrary"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.31"
structmeta = "0.2.0"
syn = { version = "2.0.26", features = ["full"] }

[dev-dependencies]
quickcheck = "1.0.3"
trybuild = "1.0.81"
